# debianutils

./: CONTRIBUTING  Makefile.am  acinclude.m4  add-shell.8  installkernel.8  ischroot.c  remove-shell.8  run-parts.8  run-parts.c  update-shells.8
debian/: changelog  control  postinst  postrm  prerm  rules
debian/patches/: 0001-fix-ischroot-failed-in-unshare.patch  series
debian/source/: lintian-overrides
debian/tests/: control  run-parts.test  smoke
po4a/de/: Makefile.am  translator_german.add
po4a/es/: Makefile.am
po4a/fr/: Makefile.am
po4a/it/: Makefile.am
po4a/ja/: Makefile.am
po4a/pl/: Makefile.am
po4a/po/: de.po  fr.po  hu.po  pt.po
po4a/pt/: Makefile.am
po4a/sl/: Makefile.am
